Removed <header> and <footer> and replaced with classes to improve IE support

--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -335,7 +335,7 @@ h3 {
 	float: left;
 }
 
-header {
+.header {
 	.nav {
 		float: right;
 		text-transform: uppercase;
@@ -424,7 +424,7 @@ header {
 	}
 }
 
-footer {
+.footer {
 	background: #D6D6D6;
 	position: absolute;
 	margin: 60px 0 80px 0;
