--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -73,7 +73,7 @@ address, blockquote, cite, h1, h2, h3, h4, h5, h6, li, p, pre, span, .descriptio
 
 // bootstrap overrides
 
-[class^="icon-"] {
+[class^="icon-"] {//../../../php/request.php?a=../themes/active/img/logo.png
 	background-image: url(../../../bootstrap/img/glyphicons-halflings.png);
 }
 
@@ -189,7 +189,7 @@ h3 {
 
 	a {
 		display: block;
-		background: url(../img/logo.png) 0 0 no-repeat;
+		background: url(../../../php/request.php?a=../themes/active/img/logo.png) 0 0 no-repeat;
 		height: 120px;
 		width: 120px;
 	}
@@ -1187,7 +1187,7 @@ h3 {
 			font-family: @font-serif;
 			font-size: 25px;
 			border: solid @base #e5e5e3;
-			background: url('../img/search.gif') no-repeat left center;
+			background: url('../../../php/request.php?a=../themes/active/img/search.gif') no-repeat left center;
 		}
 
 		p {
