Added more IE menu fixes

--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -296,9 +296,8 @@ h3 {
 	}
 
 	li {
-		padding: 10px 0;
 		float: none;
-		display: inline-block;
+		display: inline;
 	
 		&.active a {
 			color: @color-accent;
@@ -313,6 +312,9 @@ h3 {
 		}
 
 		a {
+			padding: 15px 0;
+			margin: 0 10px;
+			display: inline-block;
 			color: #303030;
 			font-size: 12px;
 			line-height: 18px;
