--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1314,26 +1314,55 @@ h3 {
 		overflow-x: hidden;
 	}
 
-	.navbar, #overview, .container {
+	#overview, .container {
 		padding-left: 20px;
 		padding-right: 20px;
 	}
 
+	.navbar-fixed-top, .navbar-fixed-bottom {
+		margin: 0;
+	}
+
 	.header {
-		.nav {
+		.logo  {
 			float: none;
+
+			a {
+				margin: 30px auto 40px auto;
+			}
+		
+		}
+		.nav {
 			text-align: center;
+			display: block;
+			float: none;
+			padding: 0;
+
+			li {
+				float: none;
+				display: inline;
+
+				a {
+					display: inline-block;
+					padding: 15px 0;
+					margin: 0 10px;
+				}
+			}
 		}
 	}
 
-	.logo  {
-		float: none;
-
-		a {
-			margin: 0 auto;
+	.subnav {
+		li {
+			a {
+				padding: 15px 0;
+			}
 		}
-		
-		
+	}
+
+	.facebook {
+		margin-top: 20px;
+		float: none;
+		display: block;
 	}
 
 }
