More style changes

--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1345,7 +1345,7 @@ h3 {
 				a {
 					display: inline-block;
 					padding: 15px 0;
-					margin: 0 10px;
+					margin: 0 5px;
 				}
 			}
 		}
@@ -1355,10 +1355,22 @@ h3 {
 		li {
 			a {
 				padding: 15px 0;
+				margin: 0 5px;
 			}
 		}
 	}
-
+	.to-top {
+		float: none;
+		margin: 0 auto;
+		
+		a {
+			display: block;
+			width: 120px;
+			margin: 20px auto 0 auto;
+			text-align: center;
+			padding: 5px 0
+		}
+	}
 	.facebook {
 		margin-top: 20px;
 		float: none;
