--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -33,11 +33,13 @@ address, blockquote, cite, h1, h2, h3, h4, h5, h6, li, p, pre, span, .descriptio
 @body-text-height: 16px;
 @color-accent: #d83629; // Logo/Accent/Link Color (Red/Orange)
 @color-body-text: #303030;
-@color-gray-accent: #eeeeee;
+@color-grey-accent: #eeeeee;
 @color-mast: #9fc9d4; // Mast Color (Aqua)
 @color-white: #fff;
 @color-red: #d83629;
 @icons: "Pictos", sans-serif;
+
+// less modules
 
 #font {
 	#proxima {
@@ -73,6 +75,21 @@ address, blockquote, cite, h1, h2, h3, h4, h5, h6, li, p, pre, span, .descriptio
 	      font-style: normal;
 	      font-weight: normal;
 	    }
+	}
+}
+
+#link {
+	.large {
+		.small-grey-text;
+		#font > #proxima > .bold;
+		display: inline;
+		color: #fff;
+		background: @color-mast;
+		padding: 12px 14px;
+
+		&:hover {
+			color: darken(@color-mast, 40%);
+		}
 	}
 }
  
@@ -333,6 +350,13 @@ h3 {
 	}
 }
 
+.link-large {
+	#link > .large;
+	.icon {
+		color: darken(@color-mast, 40%);
+	}
+}
+
 .edit-tag {
 	.edit-defaults;
 	top: @base;
@@ -448,7 +472,7 @@ h3 {
 
 	.more {
 		display: block;
-		background: darken(@color-gray-accent, 33.5%);
+		background: darken(@color-grey-accent, 33.5%);
 		#font > #proxima > .bold;
 		font-size: 12px;
 		letter-spacing: 1px;
@@ -459,7 +483,7 @@ h3 {
 		padding: 0 0 0 @base * 1.5;
 
 		&:hover {
-			background: darken(@color-gray-accent, 40%);
+			background: darken(@color-grey-accent, 40%);
 		}
 	}
 }
@@ -670,7 +694,7 @@ h3 {
 		margin-top: @base * 3;
 
 		.row {
-			margin-bottom: 30px;
+			margin-bottom: 20px;
 
 			.box {
 				font-family: 'Times New Roman', Times, serif;
@@ -712,7 +736,7 @@ h3 {
 
 	&.top {
 		position: relative;
-		top: -10px;
+		top: 0px;
 		ul {
 			list-style: none;
 			margin-left: 0;
@@ -764,16 +788,16 @@ h3 {
 	.component-downloads {
 
 		.entry {
-			background: @color-gray-accent;
+			background: @color-grey-accent;
 			padding: 0 20px;
 			border: none;
 			margin: 0;
 
 			a {
 				border: none;
-				background: @color-gray-accent;
+				background: @color-grey-accent;
 				padding: 30px 0;
-				border-bottom: 1px solid darken(@color-gray-accent, 20%);
+				border-bottom: 1px solid darken(@color-grey-accent, 20%);
 				color: @color-body-text;
 				font-size: 14px;
 
@@ -810,7 +834,7 @@ h3 {
 			}
 
 			&.even { 
-				background: @color-gray-accent; 
+				background: @color-grey-accent; 
 			}
 
 			&.last {
@@ -914,7 +938,7 @@ h3 {
 				background: none;
 				color: @color-accent;
 				text-align: right;
-				border-bottom: 1px solid @color-gray-accent;
+				border-bottom: 1px solid @color-grey-accent;
 				.border-radius(0);
 				text-shadow: none;
 			}
@@ -936,7 +960,7 @@ h3 {
 		@calendar-padding: @base * 1.5;
 
 		.entry {
-			background: @color-gray-accent;
+			background: @color-grey-accent;
 			position: relative;
 			padding: 0 20px;
 
@@ -944,7 +968,7 @@ h3 {
 				display: block;
 				height: 100%;
 				padding: @base * 1.5 @base @base * 1.5 0;
-				border-bottom: 1px solid darken(@color-gray-accent, 20%);
+				border-bottom: 1px solid darken(@color-grey-accent, 20%);
 				.clearfix;
 
 				&:hover td {
@@ -995,7 +1019,7 @@ h3 {
 			}
 
 			&.even { 
-				//background: @color-gray-accent; 
+				//background: @color-grey-accent; 
 			}
 
 			&.last a {
@@ -1066,13 +1090,13 @@ h3 {
 			}
 
 			.link {
-				background: darken(@color-gray-accent, 40%);
+				background: darken(@color-grey-accent, 40%);
 			}
 		}
 
 		.map {
 			position: relative;
-			border: 10px solid @color-gray-accent;
+			border: 10px solid @color-grey-accent;
 			line-height: 0;
 			background-position: center;
 			height: 280px;
@@ -1171,20 +1195,20 @@ h3 {
 	.component-member {
 	
 		.entry {
-			background: @color-gray-accent;
+			background: @color-grey-accent;
 			padding: 0 20px;
 
 			a {
 				min-height: 50px;
-				background: @color-gray-accent;
+				background: @color-grey-accent;
 				padding: @base * 1.5;
-				border-bottom: 1px solid darken(@color-gray-accent, 20%);
+				border-bottom: 1px solid darken(@color-grey-accent, 20%);
 				color: @color-body-text;
 				height: 72px;
 
 				&:hover { 
 					color: @color-accent;
-					border-bottom: 1px solid darken(@color-gray-accent, 20%);
+					border-bottom: 1px solid darken(@color-grey-accent, 20%);
 
 					.email {
 						color: @color-accent !important;
@@ -1197,8 +1221,8 @@ h3 {
 					left: -15px;
 					margin-right: @base;
 					.border-radius(100%);
-					width: 72px;
-					height: 72px;
+					width: 50px;
+					height: 50px;
 				}
 
 				.info  {
@@ -1216,13 +1240,14 @@ h3 {
 					}
 					.email {
 						.small-grey-text;
+						text-transform: none;
 						display: inline;
 					}
 				}
 			}
 
 			&.even { 
-				background: @color-gray-accent; 
+				background: @color-grey-accent; 
 			}
 
 			&.last a {
@@ -1444,7 +1469,18 @@ h3 {
 // TABLETS AND BELOW
 // -----------------
 @media (max-width: 979px) {
-
+	.column-full-width {
+		.nav-box {
+			.row {
+				margin-bottom: 0px;
+			}
+			.box {
+				a {
+					margin-bottom: 20px;
+				}
+			}
+		}
+	}
 
 }
 
