--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -14,7 +14,7 @@
 @import "../../../bootstrap/less/responsive-navbar.less";
 
 
-@import 'pictos.less';
+@import 'pictos.less'; 
 @import 'webfonts.less';
 
 address, blockquote, cite, h1, h2, h3, h4, h5, h6, li, p, pre, span, .description {
@@ -30,7 +30,7 @@ address, blockquote, cite, h1, h2, h3, h4, h5, h6, li, p, pre, span, .descriptio
 // variables
   
 @base: 10px;
-@body-text-height: 16px;
+@body-text-height: 16px; 
 @color-accent: #d83629; // Logo/Accent/Link Color (Red/Orange)
 @color-body-text: #303030;
 @color-grey-accent: #eeeeee;
@@ -263,10 +263,10 @@ h3 {
 }
 
 .logo {
-
+  
 	a {
 		display: block;
-		background: url(../../../php/request.php?a=../themes/active/img/logo.png) 0 0 no-repeat;
+		background: url(../img/logo.png) 0 0 no-repeat;
 		height: 120px;
 		width: 120px;
 	}
