--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1312,7 +1312,7 @@ h3 {
 			#font > #tisa > .regular;
 			font-size: 25px;
 			border: solid @base #e5e5e3;
-			background: url('../../../php/request.php?a=../themes/active/img/search.gif') no-repeat left center;
+			background: url('../img/search.gif') no-repeat left center;
 		}
 
 		p {
