--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -27,6 +27,12 @@ address, blockquote, cite, h1, h2, h3, h4, h5, h6, li, p, pre, span, .descriptio
 	}
 }
 
+// responsimage
+
+@media (-webkit-min-device-pixel-ratio: 2) { 
+	[data-responsimage] { font-family: 'pixel-ratio-2' } 
+}
+
 // variables
   
 @base: 10px;
