--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -817,6 +817,32 @@ h3 {
 }
 
 
+// home --------------------------------------------------------------
+
+.home {
+	margin-top: 40px;
+	
+	h3 {
+		margin-bottom: 15px;
+	}
+	
+	.component-teachings {
+		
+		&.large .latest {
+			margin: 0;
+			text-align: left;
+			.video {
+				margin: 0;
+				padding: 0;
+				width: 620px;
+				height: 349px;
+			}			
+		}
+		
+	}
+}
+
+
 // downloads ---------------------------------------------------------
 
 .column-right {
