--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -36,7 +36,7 @@ address, blockquote, cite, h1, h2, h3, h4, h5, h6, li, p, pre, span, .descriptio
 // variables
   
 @base: 10px;
-@body-text-height: 16px; 
+@body-text-height: 18px; 
 @color-accent: #d83629; // Logo/Accent/Link Color (Red/Orange)
 @color-body-text: #303030;
 @color-grey-accent: #eeeeee;
@@ -826,20 +826,60 @@ h3 {
 		margin-bottom: 15px;
 	}
 	
-	.component-teachings {
+	.column-center {
 		
-		&.large .latest {
-			margin: 0;
-			text-align: left;
-			.video {
+		.component-teachings {
+		
+			&.large .latest {
 				margin: 0;
-				padding: 0;
-				width: 620px;
-				height: 349px;
-			}			
-		}
-		
+				text-align: left;
+				.video {
+					margin: 0;
+					padding: 0;
+					width: 620px;
+					height: 349px;
+				}		
+				.meta {
+					h2 {
+						margin: 10px 0 5px 0;
+						text-transform: none;
+					}
+					p {
+						color: #999;
+						margin: 0;
+					}
+					.teacher {
+						#font > #proxima > .bold;
+						text-transform: uppercase;
+						
+						em {
+							text-transform: none;
+						}
+					}
+					.icon {
+						margin: 0 5px;
+					}
+				}
+				.description {
+					padding-right: 60px;
+					margin: 10px 0;
+				}
+			}
+			
+			
+		}	
 	}
+	
+	.column-right {
+		.component-events {
+			.entry {
+				&.last {
+					padding-bottom: 63px;
+				}
+			}
+		}
+	}
+	
 }
 
 
