--- a/www/httpdocs/workspace/themes/active/less/webfonts.less
+++ b/www/httpdocs/workspace/themes/active/less/webfonts.less
@@ -84,3 +84,13 @@
 	font-style:normal;
 	font-weight:normal;
 }
+
+@font-face {
+    font-family:'Climacons';
+    src: url('../fonts/climacons-webfont.eot');
+    src: url('../fonts/climacons-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/climacons-webfont.woff') format('woff'),
+         url('../fonts/climacons-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
