CSS changes for Live broadcating link

--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -344,6 +344,7 @@ h3 {
 	.box-shadow(0 1px 2px rgba(0,0,0,0.1));
 
 	strong {
+		#font > #proxima > .bold;
 		display: inline-block;
 		text-transform: uppercase;
 		padding-top: 7px;
