--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1234,6 +1234,7 @@ h3 {
 			border: 10px solid @color-grey-accent;
 			line-height: 0;
 			background-position: center;
+			background-repeat: no-repeat;
 			height: 280px;
 
 			.screen,
