--- a/www/httpdocs/workspace/themes/active/less/webfonts.less
+++ b/www/httpdocs/workspace/themes/active/less/webfonts.less
@@ -86,7 +86,7 @@
 }
 
 @font-face {
-    font-family:'Climacons';
+    font-family:'ClimaconsRegular';
     src: url('../fonts/climacons-webfont.eot');
     src: url('../fonts/climacons-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/climacons-webfont.woff') format('woff'),
