Cleaned up top bar

--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -875,6 +875,7 @@ h3 {
 					}
 					p {
 						color: #999;
+						padding: 0;
 						margin: 0;
 					}
 					.teacher {
@@ -1612,6 +1613,9 @@ h3 {
 					a {
 						display: inline-block;
 					}
+				}
+				.worship {
+					display: none;
 				}
 			}
 		}
