--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1441,7 +1441,7 @@ h3 {
 
 		input {
 			border: 5px solid #e5e5e3;
-			width: 530px;
+			width: 81%;
 			line-height: 25px;
 			height: 40px;
 			padding: 10px 15px 10px 85px;
@@ -1464,12 +1464,12 @@ h3 {
 	}
 
 	.latest {
-		text-align: center;
-		width: 650px;
-		margin: auto;
+		//text-align: center;
+		//width: 650px;
+		//margin: auto;
 
 		.video {
-			width: 650px;
+			width: 100%;
 			height: 365px;
 			margin: @base * .5 auto;
 
