--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1526,6 +1526,10 @@ h3 {
 				margin: 0 5px;
 			}
 			.icon-book {
+				-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+				filter: alpha(opacity=50);
+				-moz-opacity: 0.5;
+				-khtml-opacity: 0.5;
 				opacity: 0.5;
 				position: relative;
 				top: 7px;
