--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -855,10 +855,15 @@ h3 {
 	.column-center {
 		
 		.component-teachings {
+			iframe {
+				width: 620px;
+				height: 349px;
+			}
 		
 			.latest {
 				margin: 0;
 				text-align: left;
+
 				.video {
 					margin: 0;
 					padding: 0;
@@ -1494,7 +1499,7 @@ h3 {
 
 		.video {
 			width: 100%;
-			height: 365px;
+			height: 349px;
 			margin: @base * .5 auto;
 
 		}
@@ -1576,6 +1581,29 @@ h3 {
 		a {
 			color: #999;
 			&:hover { color: #303030; }
+		}
+	}
+	
+	.span4 {
+		width: 280px;
+		border: 10px solid #E9E9E9;
+		
+		h3 {
+			background: @color-mast;
+			color: #fff;
+			padding: 5px;
+			font-size: 14px;
+		}
+		
+		
+		h4 {
+			padding: 5px 0;
+			color: #ccc;
+			border-top: 1px solid #E9E9E9;
+			border-bottom: 1px solid #E9E9E9;
+			#font > #proxima > .bold;
+			text-transform: uppercase;
+			font-size: 14px;
 		}
 	}
 }
