--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -720,6 +720,29 @@ h3 {
 }
 
 
+.spotify {
+	color: #999;
+	background: #e9e9e9;
+	padding: 10px;
+	#font > #proxima > .regular;
+	.links {
+		margin-left: 10px;
+	}
+	a {
+		color: #6AAD2E;
+		#font > #proxima > .bold;
+		&:hover { color: darken(#6AAD2E, 10%);}
+		span {
+			margin: 0 5px;
+			text-transform: uppercase;
+			color: #999;
+			&:hover {
+				color: #303030;
+			}
+		}
+	}
+}
+
 // column defaults ---------------------------------------------------------
 
 .column-full-width {
