Added styling changes to links

--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -100,6 +100,7 @@ address, blockquote, cite, h1, h2, h3, h4, h5, h6, li, p, pre, span, .descriptio
 		padding: 12px 14px;
 
 		&:hover {
+			color: #fff;
 			background: darken(@color-mast, 10%);
 		}
 	}
