Fixed Give link styling

--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -582,6 +582,9 @@ h3 {
 		color: #333;
 	
 		&.btn.btn-primary.give {
+			position: relative;
+			left: -10px;
+			top: -5px;
 			background-image: none;
 			background: none;
 			color: #CF1E18;
@@ -591,7 +594,6 @@ h3 {
 			border: none;
 			text-transform: uppercase;
 			text-shadow: none;
-			margin-left: -10px;
 		}
 	}
 
