--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1815,6 +1815,10 @@ h3 {
 
 @media (max-width: 767px) {
 
+	iframe.video {
+		width: 450px !important;
+		height: 253px !important
+	}
 
 }
 
@@ -1899,6 +1903,11 @@ h3 {
 			padding: 0 0;
 		}
 	}
+	
+	iframe.video {
+		width: 476px !important;
+		height: 268px !important
+	}
 
 
 }
@@ -1952,6 +1961,11 @@ h3 {
 		.nav {
 			padding: 0 0;
 		}
+	}
+	
+	iframe.video {
+		width: 352px !important;
+		height: 198px !important
 	}
 
 
