Events styling changes

--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1112,12 +1112,14 @@ h3 {
 
 			.help-block {
 				#font > #tisa > .italic;
+				color: #303030;
 				font-size: 18px;
 				clear: both;
 				margin-bottom: @base;
 				padding: 0 @base * 1.5;
 
 				.icon {
+					color: #878787;
 					font-size: 20px;
 					position: relative;
 					top: -1px;
@@ -1130,6 +1132,7 @@ h3 {
 
 			.label {
 				display: block;
+				margin-bottom: 15px;
 				font-size: 14px;
 				font-weight: normal;
 				text-transform: uppercase;
@@ -1143,11 +1146,12 @@ h3 {
 			}
 			
 			.share {
-				padding: 10px;
-				background: @color-mast;
+				border-top: 1px solid #e9e9e9;
+				margin-top: 15px;
+				padding-top: 15px;
 				label, input { display: inline; }
 				label {
-					color: #fff;
+					color: #ccc;
 					#font > #proxima > .bold;
 					text-transform: uppercase;
 					margin-right: 10px;
