fixed member/role component

--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1400,7 +1400,7 @@ h3 {
 
 .column-full-width {
 
-	.component-member {
+	.component-members-roles {
 
 		.header {
 			text-align: center;
@@ -1444,7 +1444,7 @@ h3 {
 
 .column-right {
 
-	.component-member {
+	.component-members-roles {
 	
 		.entry {
 			background: @color-grey-accent;
@@ -1495,7 +1495,7 @@ h3 {
 						.small-grey-text;
 						text-transform: none;
 						display: inline;
-					}
+					} 
 				}
 			}
 
