Apple touch icon

--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1495,7 +1495,7 @@ h3 {
 						.small-grey-text;
 						text-transform: none;
 						display: inline;
-					} 
+					}
 				}
 			}
 
@@ -1657,6 +1657,14 @@ h3 {
 		}
 	}
 	
+	// main column
+	
+	.span8 {
+		
+	}
+	
+	// side column
+
 	.span4 {
 		
 		
