--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -868,6 +868,33 @@ h3 {
 	margin: 0;
 }
 
+.teachings-front {
+	h2 {
+		font-size: 18px;
+	}
+	
+	h4 {
+		font-size: 16px;
+		margin: 10px 0 5px 0;
+		color: #303030;
+		&:hover { color: @color-accent; }
+	}
+	.meta {
+		color: #999;
+		font-size: 16px;
+		#font > #tisa > .regular;
+		margin-bottom: 10px;
+	}
+	.result {
+		margin: 0 0 30px 0;
+		
+		.tags {
+			border-bottom: none;
+			padding-bottom: 5px;
+		}
+	}
+}
+
 
 // home --------------------------------------------------------------
 
@@ -930,33 +957,6 @@ h3 {
 			
 			
 		}	
-	}
-	
-	.component-text {
-		h2 {
-			font-size: 18px;
-		}
-		
-		h4 {
-			font-size: 16px;
-			margin: 10px 0 5px 0;
-			color: #303030;
-			&:hover { color: @color-accent; }
-		}
-		.meta {
-			color: #999;
-			font-size: 16px;
-			#font > #tisa > .regular;
-			margin-bottom: 10px;
-		}
-		.result {
-			margin: 0 0 30px 0;
-			
-			.tags {
-				border-bottom: none;
-				padding-bottom: 5px;
-			}
-		}
 	}
 	
 	.column-right {
