--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1500,6 +1500,7 @@ h3 {
 					position: relative;
 					left: -15px;
 					margin-right: @base;
+					margin-bottom: @base;
 					.border-radius(100%);
 					width: 50px;
 					height: 50px;
