--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -245,8 +245,6 @@ h3 {
 	margin: 0;
 }
 
-
-
 // classes
 
 .icon {
@@ -293,7 +291,7 @@ h3 {
 	margin-top: 40px;
 
 	.row {
-		margin: 40px auto 0 auto;
+		margin: 20px auto 0 auto;
 		
 		.span8 {
 			margin-left: 0;
@@ -1898,7 +1896,26 @@ h3 {
 // TABLETS AND BELOW
 // -----------------
 @media (max-width: 979px) {
-
+	
+	.header {
+		.nav {
+			margin-top: 20px;
+			margin-bottom: 0;
+			padding: 0 0;
+		}
+		.logo {
+			margin-bottom: 0;
+		}
+	}
+	
+	.mast {
+		padding-bottom: 20px;
+		.row {
+			margin-top: 0;
+		}	
+	}	
+	
+	
 	.navbar-inner {
 		.nav {
 			&.pull-right {
@@ -1967,12 +1984,23 @@ h3 {
 
 @media (min-width: 768px) and (max-width: 979px) {
 
-
 	.header {
 		.nav {
+			margin-top: 20px;
+			margin-bottom: 0;
 			padding: 0 0;
 		}
+		.logo {
+			margin-bottom: 0;
+		}
 	}
+	
+	.mast {
+		padding-bottom: 20px;
+		.row {
+			margin-top: 0;
+		}	
+	}	
 	
 	iframe.video {
 		width: 476px !important;
@@ -2029,9 +2057,21 @@ h3 {
 
 	.header {
 		.nav {
+			margin-top: 20px;
+			margin-bottom: 0;
 			padding: 0 0;
 		}
+		.logo {
+			margin-bottom: 0;
+		}
 	}
+	
+	.mast {
+		padding-bottom: 20px;
+		.row {
+			margin-top: 0;
+		}	
+	}	
 	
 	iframe.video {
 		width: 352px !important;
