--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -956,7 +956,24 @@ h3 {
 			
 		}	
 	}
-	
+	.span8 {
+		h2 {
+			font-size: 18px;
+		}
+		
+		h4 {
+			font-size: 16px;
+			margin: 10px 0 5px 0;
+			color: #303030;
+			&:hover { color: @color-accent; }
+		}
+		.meta {
+			color: #999;
+			font-size: 16px;
+			#font > #tisa > .regular;
+			margin-bottom: 10px;
+		}
+	}
 	.column-right {
 		.component-events {
 			.entry {
