--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1602,7 +1602,7 @@ h3 {
 		font-size: 12px;
 		text-align: center;
 		color: #999;
-		background: #e5e5e5;
+		background: #e9e9e9;
 		padding: @base;
 		margin: @base * .5 0;
 		
@@ -1648,11 +1648,31 @@ h3 {
 			&:hover { color: @color-accent; }
 		}
 		.result {
+			border: 5px solid #e9e9e9;
 			margin: 0 0 30px 0;
 			
+			.actions {
+				margin: 0;
+			}
+			h4 {
+				font-size: 18px;
+				padding: 0 @base;
+			}
+			.meta {
+				padding: 0 @base;
+				p {
+					font-size: 13px;
+				}			
+			}
+			.icon-book {
+				top: 5px;
+			}
+			.description {
+				padding: 0 @base;
+			}
 			.tags {
 				border-bottom: none;
-				padding-bottom: 5px;
+				padding: @base @base @base @base;
 			}
 		}
 		
