More styling changes

--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -889,6 +889,24 @@ h3 {
 		}
 	}
 	
+	.featured {
+
+		img {
+			width: 300px;
+			height: 169px;
+		}		
+
+	}
+	
+	.component-teachings {
+		.latest {
+			margin-top: 0;
+			.video {
+				margin:0;
+			}
+		}
+	}
+	
 }
 
 // text --------------------------------------------------------------
