--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1666,7 +1666,7 @@ h3 {
 			&:hover { color: @color-accent; }
 		}
 		.result {
-			border: 5px solid #e9e9e9;
+			border: 10px solid #e9e9e9;
 			margin: 0 0 30px 0;
 			
 			.actions {
@@ -1689,6 +1689,7 @@ h3 {
 				padding: 0 @base;
 			}
 			.tags {
+				border-color: #e9e9e9;
 				border-bottom: none;
 				padding: @base @base @base @base;
 			}
