--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1669,12 +1669,23 @@ h3 {
 			border: 10px solid #e9e9e9;
 			margin: 0 0 30px 0;
 			
-			.actions {
-				margin: 0;
+			.verse {
+				float: right;
+				margin-bottom: 15px;
+				font-size: 14px;
+				font-weight: normal;
+				text-transform: uppercase;
+				padding: @base;
+				background: none;
+				color: @color-accent;
+				text-align: right;
+				border-bottom: 1px solid @color-grey-accent;
+				.border-radius(0);
+				text-shadow: none;
 			}
 			h4 {
 				font-size: 18px;
-				padding: 0 @base;
+				padding: 0 @base @base * 0.5 @base;
 			}
 			.meta {
 				padding: 0 @base;
@@ -1692,6 +1703,9 @@ h3 {
 				border-color: #e9e9e9;
 				border-bottom: none;
 				padding: @base @base @base @base;
+			}
+			.actions {
+				margin: 0;
 			}
 		}
 		
