--- a/www/httpdocs/workspace/themes/active/less/common.less
+++ b/www/httpdocs/workspace/themes/active/less/common.less
@@ -1691,7 +1691,10 @@ h3 {
 				padding: 0 @base;
 				p {
 					font-size: 13px;
-				}			
+				}
+				.teacher {
+					margin-right: 0;
+				}
 			}
 			.icon-book {
 				top: 5px;
